src/test/deca/context/valid/simple_affect.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    
// 
// Historique:
//    cree le 01/01/2022

{
   int a;
   int x;

   a = x;
}