src/test/deca/context/invalid/redefintion.deca
// Description:
//    redefinition
//
// Resultats:
//     Double Initialization of  a
// 
// Historique:
//    cree le 01/01/2022

{
    int a=5;
    int a=9;

}